Add takedown by project
Change-Id: I3ef4aa161f2908167e8b7ae2eb4cfea523dc138e

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -153,7 +153,8 @@
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
-			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="targeted_takedown_tabs" id="targeted_takedown_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_janjun15" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 		</ul>
 
 		<div class="col-md-4" id="targeted_takedown_legend">
@@ -396,6 +397,16 @@
 <input type="hidden" id="t_korean_wikinews" value="<%= t('graph.korean_wikinews') %>">
 <input type="hidden" id="t_english_wikinews" value="<%= t('graph.english_wikinews') %>">
 <input type="hidden" id="t_serbian_wikipedia" value="<%= t('graph.serbian_wikipedia') %>">
+<input type="hidden" id="t_russian_wikisource" value="<%= t('graph.russian_wikisource') %>">
+<input type="hidden" id="t_czech_wikipedia" value="<%= t('graph.czech_wikipedia') %>">
+<input type="hidden" id="t_catalan_wikipedia" value="<%= t('graph.catalan_wikipedia') %>">
+<input type="hidden" id="t_english_wikispecies" value="<%= t('graph.english_wikispecies') %>">
+<input type="hidden" id="t_swedish_wikipedia" value="<%= t('graph.swedish_wikipedia') %>">
+<input type="hidden" id="t_romanian_wikipedia" value="<%= t('graph.romanian_wikipedia') %>">
+<input type="hidden" id="t_somali_wikipedia" value="<%= t('graph.somali_wikipedia') %>">
+<input type="hidden" id="t_danish_wikiquote" value="<%= t('graph.danish_wikiquote') %>">
+<input type="hidden" id="t_french_wiktionary" value="<%= t('graph.french_wiktionary') %>">
+<input type="hidden" id="t_english_wiktionary" value="<%= t('graph.english_wiktionary') %>">
 
 
 
