Add takedown by country
Change-Id: I1e04eb75040ff88678745f06aee911d6b4346c13

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -128,7 +128,8 @@
 			<li><a class="where_from_tabs" id="where_from_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 			<li><a class="where_from_tabs" id="where_from_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="where_from_tabs" id="where_from_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
-			<li><a class="where_from_tabs active" id="where_from_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="where_from_tabs" id="where_from_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="where_from_tabs active" id="where_from_janjun15" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 		</ul>
 
 		<div class="col-md-4" id="where_from_legend">
@@ -364,6 +365,10 @@
 <input type="hidden" id="t_turkey" value="<%= t('graph.turkey') %>">
 <input type="hidden" id="t_sri_lanka" value="<%= t('graph.sri_lanka') %>">
 <input type="hidden" id="t_bangladesh" value="<%= t('graph.bangladesh') %>">
+<input type="hidden" id="t_korea" value="<%= t('graph.korea') %>">
+<input type="hidden" id="t_romania" value="<%= t('graph.romania') %>">
+<input type="hidden" id="t_suriname" value="<%= t('graph.suriname') %>">
+<input type="hidden" id="t_taiwan" value="<%= t('graph.taiwan') %>">
 
 <input type="hidden" id="t_english_wikipedia" value="<%= t('graph.english_wikipedia') %>">
 <input type="hidden" id="t_wikimedia_commons" value="<%= t('graph.wikimedia_commons') %>">
