Update summary table for "Government requests breakdown"
Change-Id: I7a5d1bf5bac829d4819a7d34fbaab18db5ff09e2

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -74,44 +74,49 @@
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3>
-			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
+			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2015</small><br />
 			<%= t('privacy.govt_requests') %>
 		</h3>
 		<hr />
 		<table>
+			<tr>
+				<td><%= t('graph.italy') %></td>
+				<td><%= t('graph.university') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><%= t('graph.poland') %></td>
+				<td><%= t('graph.politicians_candidates') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><%= t('graph.sri_lanka') %></td>
+				<td><%= t('graph.military') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><%= t('graph.suriname') %></td>
+				<td><%= t('graph.politicians_candidates') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><%= t('graph.united_kingdom') %></td>
+				<td><%= t('graph.cps') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><%= t('graph.usa') %></td>
+				<td><%= t('graph.politicians_candidates') %></td>
+				<td>2</td>
+			</tr>
 			<tr>
 				<td><%= t('graph.usa') %></td>
 				<td><%= t('graph.federal_agency') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td><%= t('graph.germany') %></td>
-				<td><%= t('graph.municipal_government') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td><%= t('graph.united_kingdom') %></td>
-				<td><%= t('graph.uknmd') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td><%= t('graph.brazil') %></td>
+				<td><%= t('graph.unknown') %></td>
 				<td><%= t('graph.politicians_candidates') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td><%= t('graph.malaysia') %></td>
-				<td><%= t('graph.ministry') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td><%= t('graph.turkey') %></td>
-				<td><%= t('graph.ministry') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td><%= t('graph.israel') %></td>
-				<td><%= t('graph.municipal_government') %></td>
 				<td>1</td>
 			</tr>
 		</table>
