--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -42,30 +42,30 @@
 
 	<div class="story summary_table">
 		<h3>
-			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
+			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2015</small><br />
 			<%= t('privacy.summary') %>
 		</h3>
 		<hr />
 		<table>
 			<tr class="highlight">
 				<td><%= t('privacy.total_number_of_requests') %></td>
-				<td>28</td>
+				<td>23</td>
 			</tr>
 			<tr>
 				<td class="indent"><a href="/faq.html#informal_non_government_requests"><%= t('privacy.informal_non_govt') %></td>
-				<td>11</td>
+				<td>15</td>
 			</tr>
 			<tr>
 				<td class="indent"><a href="/faq.html#informal_government_requests"><%= t('privacy.informal_govt') %></a></td>
-				<td>11</td>
+				<td>6</td>
 			</tr>
 			<tr>
 				<td class="indent"><a href="/faq.html#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a></td>
-				<td>3</td>
+				<td>0</td>
 			</tr>
 			<tr>
 				<td class="indent"><a href="/faq.html#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a></td>
-				<td>2</td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"><a href="//en.wikipedia.org/wiki/Administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a></td>
@@ -73,23 +73,27 @@
 			</tr>
 			<tr>
 				<td class="indent"><a href="/faq.html#search_warrant"><%= t('privacy.search_warrants') %></a></td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td class="indent"><a href="/faq.html#court_order"><%= t('privacy.court_orders') %></a></td>
 				<td>1</td>
 			</tr>
 			<tr class="last">
-				<td class="indent"><a href="/faq.html#court_order"><%= t('privacy.court_orders') %></a></td>
+				<td class="indent"><a href="/faq.html#national_security_request"><%= t('privacy.national_security_requests') %></a></td>
 				<td>0</td>
 			</tr>
 			<tr class="highlight">
 				<td><%= t('privacy.information_produced') %></td>
-				<td>1</td>
+				<td>0</td>
 			</tr>
 			<tr class="highlight">
 				<td><%= t('privacy.user_potentially_affected') %></td>
-				<td>2157</td>
+				<td>28</td>
 			</tr>
 			<tr class="highlight">
 				<td><%= t('privacy.user_actually_affected') %></td>
-				<td>2121</td>
+				<td>0</td>
 			</tr>
 		</table>
 	</div>
