Update summary table for "Government requests breakdown"
Change-Id: Icd370d10f981b4f230f6530ba1e2aed46e2bb3d8

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -156,7 +156,7 @@
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3>
-			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
+			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2015</small><br />
 			<%= t('privacy.govt_requests') %>
 		</h3>
 		<hr />
@@ -164,51 +164,36 @@
 			<tr class="highlight">
 				<td><%= t('graph.informal_government_requests') %></td>
 				<td>Total</td>
-				<td>11</td>
+				<td>6</td>
 			</tr>
 			<tr>
-				<td class="indent noborder"><%= t('graph.usa') %></td>
+				<td class="indent"><%= t('graph.united_kingdom') %></td>
 				<td><%= t('graph.local_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent"></td>
-				<td><%= t('graph.federal_agency') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td class="indent"><%= t('graph.france') %></td>
-				<td><%= t('graph.local_police') %></td>
-				<td>4</td>
-			</tr>
-			<tr>
-				<td class="indent noborder"><%= t('graph.italy') %></td>
+				<td class="indent"><%= t('graph.canada') %></td>
 				<td><%= t('graph.local_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent"></td>
-				<td><%= t('graph.federal_police') %></td>
-				<td>2</td>
-			</tr>
-			<tr>
-				<td class="indent"><%= t('graph.brazil') %></td>
-				<td><%= t('graph.executive_office') %></td>
+				<td class="indent"><%= t('graph.germany') %></td>
+				<td><%= t('graph.local_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.israel') %></td>
-				<td><%= t('graph.municipal_government') %></td>
-				<td>1</td>
-			</tr>
-			<tr class="highlight">
-				<td><%= t('graph.warrant') %></td>
-				<td>Total</td>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td><%= t('graph.ministry') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.usa') %></td>
-				<td><%= t('graph.doj') %></td>
+				<td class="indent"><%= t('graph.netherlands') %></td>
+				<td><%= t('graph.local_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.russia') %></td>
+				<td><%= t('graph.upa') %></td>
 				<td>1</td>
 			</tr>
 			<tr class="highlight">
@@ -219,6 +204,51 @@
 			<tr>
 				<td class="indent"><%= t('graph.usa') %></td>
 				<td><%= t('graph.doj') %></td>
+				<td>1</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.court_order') %></td>
+				<td>Total</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td><%= t('graph.local_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.informal_non_government_requests') %></td>
+				<td>Total</td>
+				<td>15</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td></td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.france') %></td>
+				<td></td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.germany') %></td>
+				<td></td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td></td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.australia') %></td>
+				<td></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.unknown') %></td>
+				<td></td>
 				<td>1</td>
 			</tr>
 		</table>
