Fixes from legal
Change-Id: I6e7cf45ea8e573426198fd15076a2590f140f642

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -105,12 +105,12 @@
 				<td>1</td>
 			</tr>
 			<tr>
-				<td><%= t('graph.usa') %></td>
+				<td class="noborder"><%= t('graph.usa') %></td>
 				<td><%= t('graph.politicians_candidates') %></td>
 				<td>2</td>
 			</tr>
 			<tr>
-				<td><%= t('graph.usa') %></td>
+				<td></td>
 				<td><%= t('graph.federal_agency') %></td>
 				<td>1</td>
 			</tr>
