Add data for privacy page
Change-Id: Ia158a02a43145328fb1c599b63c300cda4bab315

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -130,7 +130,8 @@
 			<li><a id="user_data_jul12jun13" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 			<li><a id="user_data_juldec13" class="user_data_tabs"  href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a id="user_data_janjun14" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
-			<li><a id="user_data_juldec14" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a id="user_data_juldec14" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a id="user_data_janjun15" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 		</ul>
 		<div class="graph">
 			<div class="row">
@@ -293,6 +294,8 @@
 <input type="hidden" id="t_slovenia" value="<%= t('graph.slovenia') %>">
 <input type="hidden" id="t_china" value="<%= t('graph.china') %>">
 <input type="hidden" id="t_united_kingdom" value="<%= t('graph.united_kingdom') %>">
+<input type="hidden" id="t_australia" value="<%= t('graph.australia') %>">
+<input type="hidden" id="t_russia" value="<%= t('graph.russia') %>">
 <input type="hidden" id="t_france" value="<%= t('graph.france') %>">
 <input type="hidden" id="t_germany" value="<%= t('graph.germany') %>">
 <input type="hidden" id="t_india" value="<%= t('graph.india') %>">
