Fix unknown label and flag
Change-Id: Id19033e6e526fa31acc550d3e3767eae2da82b87

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -289,6 +289,7 @@
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
 <input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
 <input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
+<input type="hidden" id="t_unknown" value="<%= t('graph.unknown') %>">
 <input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
 <input type="hidden" id="t_israel" value="<%= t('graph.israel') %>">
 <input type="hidden" id="t_slovenia" value="<%= t('graph.slovenia') %>">
