Move and add columns in sum.csv
 * “Informal Government requests should be relabeled to “Court Orders”
 * “Warrants” should be relabeled to “Informal Government Requests”

Change-Id: I7d4cff989efbda9aadf0129904ec3a0857836c30

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -318,6 +318,7 @@
 <input type="hidden" id="t_civil_subpoenas" value="<%= t('graph.civil_subpoenas') %>">
 <input type="hidden" id="t_informal_government_requests" value="<%= t('graph.informal_government_requests') %>">
 <input type="hidden" id="t_warrant" value="<%= t('graph.warrant') %>">
+<input type="hidden" id="t_court_orders" value="<%= t('graph.court_orders') %>">
 
 <input type="hidden" id="t_physical_threats" value="<%= t('graph.physical_threats') %>">
 <input type="hidden" id="t_suicide_threats" value="<%= t('graph.suicide_threats') %>">
