Fix typo on the DMCA page
Under the DMCA takedown section, in the "Percentage of Requests Granted"
box, it says Jul-Dec 2015 when it should be Jan-Jun 2015.

Change-Id: If44cb9693374c05d1b5bbb93782e4e792bd75fda

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -215,7 +215,7 @@
   </section>
 
   <section class="scorecard scorecard_bottom">
-    <h2><%= t('dates.jul') %> 2015 – <%= t('dates.dec') %> 2015</h2>
+    <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2015</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
       <dd>14<small>%</small></dd>
