Update "Download Data" link in the footer
Added two tabs with data for the last two reports, July - December
2014 and January - June 2015. File from Aeryn & Jim.

Change-Id: If5326b3031cb36b5925d0d42c1db93ce34f5a602

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -64,7 +64,7 @@
 				<div class="col-md-2">
 					<ul>
 						<li><a href="//meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
-						<li><a href="/data/data_aug2014.ods"><%= t('menu.download_data') %></a></li>
+						<li><a href="/data/data_jun2015.ods"><%= t('menu.download_data') %></a></li>
 						<li><a href="//wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="//meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 					</ul>
