--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -10,7 +10,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Category:Vulpes_vulpes#/media/File:Kew_Gardens_-_London_-_September_2008_%282958753889%29.jpg"><img src="/images/story_stock.png"></a>
-    <h3><%= t('content.story_stock_title') %></h3>
+    <h3 id="right-way"><%= t('content.story_stock_title') %></h3>
     <p><%= t('content.story_stock_body') %></p>
   </div>
 </div>
@@ -18,7 +18,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Barnstar#/media/File:Original_Barnstar_Hires.png"><img src="/images/story_barnstar.png"></a>
-    <h3><%= t('content.story_barnstar_title') %></h3>
+    <h3id="home-made"><%= t('content.story_barnstar_title') %></h3>
     <p><%= t('content.story_barnstar_body') %></p>
   </div>
 </div>
@@ -26,7 +26,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Wiki#/media/File:Chiodini_wiki.jpg"><img src="/images/story_identity.png"></a>
-    <h3><%= t('content.story_identity_title') %></h3>
+    <h3 id="mistaken-identity"><%= t('content.story_identity_title') %></h3>
     <p><%= t('content.story_identity_body') %></p>
   </div>
 </div>
@@ -37,7 +37,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Category:Interiors_of_museums#/media/File:Preusser,_Karl_Louis_-_In_der_Dresdner_Galerie_-_1881.jpg"><img src="/images/story_kempler.png"></a>
-    <h3><%= t('content.story_kempler_title') %></h3>
+    <h3 id="copyrighting-facts"><%= t('content.story_kempler_title') %></h3>
     <p><%= t('content.story_kempler_body') %></p>
   </div>
 </div>
@@ -45,7 +45,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:Screenshot_from_IMAX%C2%AE_3D_movie_Hidden_Universe_showing_the_Helix_Nebula_in_infrared.jpg"><img src="/images/story_guru.png"></a>
-    <h3><%= t('content.story_guru_title') %></h3>
+    <h3 id="citation-needed"><%= t('content.story_guru_title') %></h3>
     <p><%= t('content.story_guru_body') %></p>
   </div>
 </div>
@@ -53,7 +53,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:TaylorFillmore.jpg"><img src="/images/story_political.png"></a>
-    <h3><%= t('content.story_political_title') %></h3>
+    <h3 id="political-points"><%= t('content.story_political_title') %></h3>
     <p><%= t('content.story_political_body') %></p>
   </div>
 </div>
@@ -65,7 +65,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:Coffee_Berries.jpg"><img src="/images/story_coffee.png"></a>
-    <h3><%= t('content.story_coffee_title') %></h3>
+    <h3 id="grounds-for-removal"><%= t('content.story_coffee_title') %></h3>
     <p><%= t('content.story_coffee_body') %></p>
   </div>
 </div>
@@ -73,7 +73,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//en.wikipedia.org/wiki/File:Myanmar_visa.jpg"><img src="/images/story_myanmar.png"></a>
-    <h3><%= t('content.story_myanmar_title') %></h3>
+    <h3 id="unredacted"><%= t('content.story_myanmar_title') %></h3>
     <p><%= t('content.story_myanmar_body') %></p>
   </div>
 </div>
@@ -81,7 +81,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:Poster_of_Alexander_Crystal_Seer.jpg"><img src="/images/story_seer.png"></a>
-    <h3><%= t('content.story_seer_title') %></h3>
+    <h3 id="murky-future"><%= t('content.story_seer_title') %></h3>
     <p><%= t('content.story_seer_body') %></p>
   </div>
 </div>
@@ -93,7 +93,7 @@
 <div class="col-md-4">
   <div class="story">
     <img src="/images/story_missing.png">
-    <h3><%= t('content.story_dmca_title') %></h3>
+    <h3 id="doubling-down-dmca"><%= t('content.story_dmca_title') %></h3>
     <p><%= t('content.story_dmca_body') %></p>
   </div>
 </div>
@@ -101,7 +101,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:Audio_Sound_Arts_Studio_Control_Room.jpg"><img src="/images/story_studio.png"></a>
-    <h3><%= t('content.story_studio_title') %></h3>
+    <h3 id="no-take-backsies"><%= t('content.story_studio_title') %></h3>
     <p><%= t('content.story_studio_body') %></p>
   </div>
 </div>
@@ -109,7 +109,7 @@
 <div class="col-md-4">
   <div class="story">
     <img src="/images/story_missing.png">
-    <h3><%= t('content.story_mistake_title') %></h3>
+    <h3 id="common-mistake"><%= t('content.story_mistake_title') %></h3>
     <p><%= t('content.story_mistake_body') %></p>
   </div>
 </div>
@@ -121,7 +121,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="/images/story_emergency.png"></a>
-    <h3><%= t('privacy.story_emergency_title') %></h3>
+    <h3 id="deadly-threat"><%= t('privacy.story_emergency_title') %></h3>
     <p><%= t('privacy.story_emergency_body') %></p>
   </div>
 </div>
@@ -129,7 +129,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="/images/story_whitehouse.png"></a>
-    <h3><%= t('privacy.story_whitehouse_title') %></h3>
+    <h3 id="president-threats"><%= t('privacy.story_whitehouse_title') %></h3>
     <p><%= t('privacy.story_whitehouse_body') %></p>
   </div>
 </div>
@@ -137,7 +137,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="/images/story_suicide.png"></a>
-    <h3><%= t('privacy.story_suicide_title') %></h3>
+    <h3 id="dealing-with-suicide"><%= t('privacy.story_suicide_title') %></h3>
     <p><%= t('privacy.story_suicide_body') %></p>
   </div>
 </div>
@@ -150,7 +150,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
-    <h3><%= t('content.story1_title') %></h3>
+    <h3 id="french-agency"><%= t('content.story1_title') %></h3>
     <p><%= t('content.story1_body') %></p>
   </div>
 </div>
@@ -158,7 +158,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
-    <h3><%= t('content.story2_title') %></h3>
+    <h3 id="monkey-selfie"><%= t('content.story2_title') %></h3>
     <p><%= t('content.story2_body') %></p>
   </div>
 </div>
@@ -166,7 +166,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
-    <h3><%= t('content.story3_title') %></h3>
+    <h3 id="aboriginal"><%= t('content.story3_title') %></h3>
     <p><%= t('content.story3_body') %></p>
   </div>
 </div>
@@ -178,7 +178,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
-    <h3>
+    <h3 id="babe-ruth">
       <%= t('content.s_t_babe_ruth') %>
     </h3>
     <%= t('content.s_s_babe_ruth') %>
@@ -188,7 +188,7 @@
 <div class="col-md-4">
   <div class="story">
     <img src="/images/story_obama.png">
-    <h3>
+    <h3 id="obama">
       <%= t('content.s_t_obama') %>
     </h3>
       <%= t('content.s_s_obama') %>
@@ -198,7 +198,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
-    <h3>
+    <h3 id="the-classics">
       <%= t('content.s_t_classic') %>
     </h3>
     <%= t('content.s_s_classic') %>
