Add piwik code and re-build static pages
Bug: T125175
Change-Id: Ia45292af3eaaa6d2e3481b86b870b2bef5f93988

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,21 @@
 		<link rel="shortcut icon" href="//bits.wikimedia.org/favicon/wmf.ico" />
 		<title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
 
+		<!-- Piwik -->
+		<script type="text/javascript">
+			var _paq = _paq || [];
+			_paq.push(['trackPageView']);
+			_paq.push(['enableLinkTracking']);
+			(function() {
+				var u="//piwik.wikimedia.org/";
+				_paq.push(['setTrackerUrl', u+'piwik.php']);
+				_paq.push(['setSiteId', 4]);
+				var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+				g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+			})();
+		</script>
+		<!-- End Piwik Code -->
+
 		<%= stylesheet_link_tag "bootstrap.min.css" %>
 		<%= stylesheet_link_tag "master.css" %>
 		<%= stylesheet_link_tag "graph.css" %>
@@ -77,7 +92,6 @@
 						<li><a href="//wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
-
 			</footer>
 
 		</div>
